[package]
name = "mosec"
version = "0.9.6"
authors = ["Keming <kemingy94@gmail.com>", "Zichen <lkevinzc@gmail.com>"]
edition = "2024"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/mosecorg/mosec"
description = "Model Serving made Efficient in the Cloud."
documentation = "https://docs.rs/mosec"
categories = ["science"]
keywords = [
  "machine-learning",
  "deep-learning",
  "cloud",
  "model-serving",
  "service",
]
exclude = ["target", "examples", "tests", "scripts"]
rust-version = "1.85"

[dependencies]
bytes = "1.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["local-time", "json"] }
tokio = { version = "1.48", features = [
  "rt",
  "rt-multi-thread",
  "time",
  "macros",
  "sync",
  "signal",
  "io-util",
] }
derive_more = { version = "2.0.1", features = ["display", "error", "from"] }
# MPMS that only one consumer sees each message & async
async-channel = "2.5"
prometheus-client = "0.24.0"
axum = { version = "0.8.6", default-features = false, features = [
  "matched-path",
  "original-uri",
  "query",
  "tokio",
  "http1",
  "http2",
] }
async-stream = "0.3.6"
serde = "1.0"
serde_json = "1.0"
utoipa = "5.4"
utoipa-swagger-ui = { version = "9", features = ["axum"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = [
  "compression-zstd",
  "decompression-zstd",
  "compression-gzip",
  "decompression-gzip",
] }
